# spatialdata

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGES  CHANGES.md  LICENSE.md  Make.mm  Makefile.am  README  README.md  TODO  azure-pipelines.yml  check.am  configure.ac  setup.cfg  setup.py  subpackage.am  tidy.sh
applications/: Makefile.am  gensimpledb.py  pyconvert.py
doc/: Make.mm  Makefile.am  doxyconfig  spatialdata-0.1.vpp
doc/developer/: updatecopyright.sh
docs/: Makefile.am  conf.py  index.md  requirements.txt
docs/_static/images/: cig_short_spatialdata.xcf
docs/developer/: index.md
docs/intro/: development-plan.md  index.md  preface.md
docs/user/: coordsys.md  index.md  nondimensionalization.md
docs/user/components/: implementations.md  index.md  update.sh  update_components.sh
docs/user/figs/: csgeolocal.tex  generate.sh
docs/user/file-formats/: index.md  simple-ascii.md  simple-grid.md  time-history.md
docs/user/spatialdb/: analyticdb.md  compositedb.md  gravity-field.md  index.md  overview.md  simpledb.md  simplegriddb.md  uniformdb.md
docs/user/timedb/: index.md
libsrc/: Makefile.am
libsrc/geocoords/: CSCart.cc  CSCart.hh  CSCart.icc  CSGeo.cc  CSGeo.hh  CSGeo.icc  CSGeoLocalCart.cc  CSGeoLocalCart.hh  CSGeoLocalCart.icc  CSGeoProj.cc  CSGeoProj.hh  CSGeoProj.icc  CSPicklerAscii.cc  CSPicklerAscii.hh  Converter.cc  Converter.hh  CoordSys.cc  CoordSys.hh  CoordSys.icc  GeoCoordSys.cc  GeoCoordSys.hh  GeoCoordSys.icc  Geoid.cc  Geoid.hh  Geoid.icc  Makefile.am  Projector.cc  Projector.hh  Projector.icc  geocoordsfwd.hh  proj4fwd.h
libsrc/geocoords/data/: Makefile.am
libsrc/spatialdata/: Makefile.am
libsrc/spatialdata/geocoords/: CSCart.cc  CSCart.hh  CSCart.icc  CSGeo.cc  CSGeo.hh  CSGeo.icc  CSGeoLocal.cc  CSGeoLocal.hh  CSGeoLocalCart.cc  CSGeoLocalCart.hh  CSGeoLocalCart.icc  CSGeoProj.cc  CSGeoProj.hh  CSGeoProj.icc  CSPicklerAscii.cc  CSPicklerAscii.hh  Converter.cc  Converter.hh  CoordSys.cc  CoordSys.hh  CoordSys.icc  Geoid.cc  Geoid.hh  Geoid.icc  Makefile.am  Projector.cc  Projector.hh  Projector.icc  geocoordsfwd.hh  proj4fwd.h
libsrc/spatialdata/muparser/: Makefile.am  muparserfwd.hh
libsrc/spatialdata/spatialdb/: AnalyticDB.cc  AnalyticDB.hh  AnalyticDB.icc  CompositeDB.cc  CompositeDB.hh  Exception.hh  Exception.icc  GocadVoxet.cc  GocadVoxet.hh  GravityField.cc  GravityField.hh  GravityField.icc  Makefile.am  SCECCVMH.cc  SCECCVMH.hh  SCECCVMH.icc  SimpleDB.cc  (+36 more)
libsrc/spatialdb/: CompositeDB.cc  CompositeDB.hh  Exception.hh  Exception.icc  GeoProjGridDB.cc  GeoProjGridDB.hh  GeoProjGridDB.icc  GocadVoxet.cc  GocadVoxet.hh  GravityField.cc  GravityField.hh  GravityField.icc  Makefile.am  SCECCVMH.cc  SCECCVMH.hh  SCECCVMH.icc  SimpleDB.cc  SimpleDB.hh  SimpleDB.icc  SimpleDBData.cc  SimpleDBData.hh  SimpleDBData.icc  SimpleDBQuery.cc  SimpleDBQuery.hh  SimpleDBTypes.hh  SimpleDBTypes.icc  SimpleGridAscii.cc  SimpleGridAscii.hh  SimpleGridDB.cc  SimpleGridDB.hh  SimpleGridDB.icc  SimpleIO.cc  SimpleIO.hh  SimpleIO.icc  SimpleIOAscii.cc  SimpleIOAscii.hh  SimpleIOAscii.icc  SpatialDB.cc  SpatialDB.hh  SpatialDB.icc  (+13 more)
libsrc/units/: Makefile.am  NondimElastic.cc  NondimElastic.hh  NondimElastic.icc  Nondimensional.cc  Nondimensional.hh  Nondimensional.icc  Parser.cc  Parser.hh  unitsfwd.hh
libsrc/utils/: LineParser.cc  LineParser.hh  Makefile.am  PointsStream.cc  PointsStream.hh  PointsStream.icc  utilsfwd.hh
modulesrc/: Makefile.am  module.am
modulesrc/geocoords/: CSCart.i  CSGeo.i  CSGeoLocal.i  CSGeoLocalCart.i  CSGeoProj.i  Converter.i  CoordSys.i  Makefile.am  Projector.i  geocoords.i  geocoords.pyxe  geocoords.pyxe.src
modulesrc/include/: Makefile.am  chararray.i
modulesrc/spatialdb/: AnalyticDB.i  CompositeDB.i  GravityField.i  Makefile.am  SCECCVMH.i  SimpleDB.i  SimpleDBData.i  SimpleGridAscii.i  SimpleGridDB.i  SimpleIO.i  SimpleIOAscii.i  SpatialDBObj.i  TimeHistory.i  TimeHistoryIO.i  UniformDB.i  UserFunctionDB.i  spatialdb.i  spatialdb.pxd.src  spatialdb.pyxe  spatialdb.pyxe.src
modulesrc/units/: Makefile.am  Nondimensional.i  units.i  units.pyxe.src
modulesrc/utils/: Makefile.am  SpatialdataVersion.i  simplearray.pyxe  simplearray.pyxe.src  utils.i  utils.pyxe  utils.pyxe.src
spatialdata/: Makefile.am  __init__.py
spatialdata/geocoords/: CSCart.py  CSGeo.py  CSGeoLocal.py  CSGeoLocalCart.py  CSGeoProj.py  Converter.py  CoordSys.py  Makefile.am  Projector.py  __init__.py
spatialdata/spatialdb/: AnalyticDB.py  CompositeDB.py  GravityField.py  Makefile.am  SCECCVMH.py  SimpleDB.py  SimpleGridAscii.py  SimpleGridDB.py  SimpleIO.py  SimpleIOAscii.py  SpatialDB.py  SpatialDBObj.py  TimeHistory.py  TimeHistoryIO.py  UniformDB.py  UserFunctionDB.py  __init__.py
spatialdata/testing/: TestCases.py  UnitTestApp.py
spatialdata/units/: NondimElastic.py  NondimElasticDynamic.py  NondimElasticQuasistatic.py  Nondimensional.py  __init__.py
spatialdata/utils/: ChangeCoordSys.py  ConvertApp.py  CppData.py  Makefile.am  PointsStream.py  UnitTestApp.py  __init__.py
templates/: Makefile.am  README
templates/spatialdb/: GeoGridVelModel.cc  GeoGridVelModel.hh  GeoGridVelModel.icc  GeoGridVelModel.py  Makefile.am  README  UniformVelModel.cc  UniformVelModel.hh  UniformVelModel.i  UniformVelModel.py  __init__.py  configure.ac  spatialdatacontrib.i  spatialdb.pyxe.src  spatialdbcontrib.i
tests/: Make.mm  Makefile.am  check.am
tests/langtests/: Make.mm
tests/libtests/: Make.mm  Makefile.am  TestSimpleDB.cc  TestSimpleDB.h  TestSimpleDB.icc  TestSimpleDBArea.cc  TestSimpleDBArea.h  TestSimpleDBArea.icc  TestSimpleDBLine.cc  TestSimpleDBLine.h  TestSimpleDBLine.icc  TestSimpleDBPoint.cc  TestSimpleDBPoint.h  TestSimpleDBPoint.icc  TestSimpleDBQuery.cc  TestSimpleDBQuery.h  TestSimpleDBVolume.cc  TestSimpleDBVolume.h  TestSimpleDBVolume.icc  TestSimpleIOAscii.cc  TestSimpleIOAscii.h  TestSpatialDB.cc  TestSpatialDB.h  local.def  testspatial.cc
tests/pytests/: Make.mm  Makefile.am  TestSpatialDB.py  UnitTestApp.py  testspatial.py
tests/src/: Makefile.am  driver_catch2.cc
(+709 files in other folders)
