[egg_info]
tag_build =
tag_date = 0

[metadata]
name = spatialdata
version = 3.0.0
author = Brad Aagaard
author_email = baagaard@usgs.gov
description = :TODO:
license = MIT
url = http://www.geodynamics.org/cig/software/spatialdata

[options]
python_requires = >=3.6

packages = find:

scripts =
	applications/gensimpledb.py

#include_package_data = True
zip_safe = False

#[options.package_data]

#[options.packages.find]
