[egg_info]
tag_build =
tag_date = 0

[metadata]
name = spatialdata
version = 3.1.2
author = Brad Aagaard
author_email = baagaard@usgs.gov
description = Library for specifying spatial variations in input parameters (used in PyLith).
license = MIT
url = https://geodynamics.org/resources/spatialdata

[options]
python_requires = >=3.8

packages = find:

scripts =
	applications/gensimpledb.py

#include_package_data = True
zip_safe = False

#[options.package_data]

[options.packages.find]
exclude =
	developer
	docs
	docker
	examples
	libsrc
	m4
	modulesrc
	templates
	tests
