# =================================================================================================
# This code is part of SpatialData, developed through the Computational Infrastructure
# for Geodynamics (https://github.com/geodynamics/spatialdata).
#
# Copyright (c) 2010-2024, University of California, Davis and the SpatialData Development Team.
# All rights reserved.
#
# See https://mit-license.org/ and LICENSE.md and for license information. 
# =================================================================================================
#

dist_noinst_DATA = \
	conf.py \
	requirements.txt \
	_static/css/custom.css \
	_static/images/cig_logo_dots.png \
	_static/images/cig_short_nolabel.png \
	_static/images/cig_short_spatialdata.png \
	_static/images/cig_short_spatialdata.xcf \
	_templates/sidebar-cig.html \
	index.md \
	intro/index.md \
	intro/development-plan.md \
	intro/preface.md \
	intro/quickstart.md \
	intro/release-notes.md \
	intro/images/easy.png \
	intro/images/intermediate.png \
	intro/images/difficult.png \
	intro/images/expert.png \
	user/index.md \
	user/file-formats/simple-grid.md \
	user/file-formats/index.md \
	user/file-formats/time-history.md \
	user/file-formats/simple-ascii.md \
	user/timedb/index.md \
	user/components/update_components.sh \
	user/components/index.md \
	user/components/implementations.md \
	user/components/utils/PointsStream.md \
	user/components/utils/UnitTestApp.md \
	user/components/utils/index.md \
	user/components/geocoords/CSGeo.md \
	user/components/geocoords/index.md \
	user/components/geocoords/CSCart.md \
	user/components/geocoords/CoordSys.md \
	user/components/units/NondimElasticQuasistatic.md \
	user/components/units/index.md \
	user/components/units/NondimElasticDynamic.md \
	user/components/units/Nondimensional.md \
	user/components/spatialdb/SimpleGridDB.md \
	user/components/spatialdb/CompositeDB.md \
	user/components/spatialdb/SimpleDB.md \
	user/components/spatialdb/UserFunctionDB.md \
	user/components/spatialdb/generator/Geometry.md \
	user/components/spatialdb/generator/Value.md \
	user/components/spatialdb/generator/GenSimpleDBApp.md \
	user/components/spatialdb/generator/index.md \
	user/components/spatialdb/generator/Shaper.md \
	user/components/spatialdb/SimpleGridAscii.md \
	user/components/spatialdb/GravityField.md \
	user/components/spatialdb/index.md \
	user/components/spatialdb/TimeHistory.md \
	user/components/spatialdb/SpatialDBObj.md \
	user/components/spatialdb/SCECCVMH.md \
	user/components/spatialdb/UniformDB.md \
	user/components/spatialdb/SimpleIOAscii.md \
	user/nondimensionalization.md \
	user/spatialdb/simplegriddb.md \
	user/spatialdb/overview.md \
	user/spatialdb/compositedb.md \
	user/spatialdb/simpledb.md \
	user/spatialdb/index.md \
	user/spatialdb/gravity-field.md \
	user/spatialdb/uniformdb.md \
	user/coordsys.md	


# End of file 
