# -*- Makefile -*-
# ----------------------------------------------------------------------
#
# Brad T. Aagaard, U.S. Geological Survey
#
# This code was developed as part of the Computational Infrastructure
# for Geodynamics (http://geodynamics.org).
#
# Copyright (c) 2010-2023 University of California, Davis
#
# See LICENSE.md for license information.
#
# ----------------------------------------------------------------------

install-exec-local:
	$(PYTHON) -m pip install $(top_srcdir)

EXTRA_DIST = \
	__init__.py \
	geocoords/CSCart.py \
	geocoords/CSGeo.py \
	geocoords/Converter.py \
	geocoords/CoordSys.py \
	geocoords/__init__.py \
	spatialdb/CompositeDB.py \
	spatialdb/GravityField.py \
	spatialdb/SCECCVMH.py \
	spatialdb/SimpleDB.py \
	spatialdb/SimpleGridAscii.py \
	spatialdb/SimpleGridDB.py \
	spatialdb/SimpleIO.py \
	spatialdb/SimpleIOAscii.py \
	spatialdb/SpatialDBObj.py \
	spatialdb/TimeHistory.py \
	spatialdb/TimeHistoryIO.py \
	spatialdb/UniformDB.py \
	spatialdb/AnalyticDB.py \
	spatialdb/UserFunctionDB.py \
	spatialdb/__init__.py \
	spatialdb/generator/GenSimpleDBApp.py \
	spatialdb/generator/Geometry.py \
	spatialdb/generator/Shaper.py \
	spatialdb/generator/Value.py \
	spatialdb/generator/__init__.py \
	units/NondimElasticDynamic.py \
	units/NondimElasticQuasistatic.py \
	units/Nondimensional.py \
	units/__init__.py \
	utils/PointsStream.py \
	utils/__init__.py


# End of file 
