# -*- Makefile -*-
#
# ----------------------------------------------------------------------
#
#                           Brad T. Aagaard
#                        U.S. Geological Survey
#
# <LicenseText>
#
# ----------------------------------------------------------------------
#

EXTRA_DIST = \
	Makefile.am \
	README \
	spatialdb/README \
	spatialdb/configure \
	spatialdb/configure.ac \
	spatialdb/Makefile.am \
	spatialdb/aclocal.m4 \
	spatialdb/Makefile.in \
	spatialdb/portinfo.in \
	spatialdb/UniformVelModel.hh \
	spatialdb/UniformVelModel.cc \
	spatialdb/UniformVelModel.i \
	spatialdb/spatialdbcontrib.i \
	spatialdb/__init__.py \
	spatialdb/UniformVelModel.py \
	spatialdb/tests/Makefile.am \
	spatialdb/tests/Makefile.in \
	spatialdb/tests/testcontrib.py \
	spatialdb/tests/TestUniformVelModel.py

# End of file 
